# thopa_sichai_backend

./: .gitignore  README.md  esp32_to_django_backend.py  manage.py  pyproject.toml
anveshan_project/: asgi.py  settings.py  urls.py  wsgi.py
soil_moisture/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
soil_moisture/migrations/: 0001_initial.py  0002_motorstate.py
thopa_sichai/: __init__.py
